--- a/style/styles.css
+++ b/style/styles.css
@@ -4,8 +4,12 @@ body, div, th, td, input, textarea {
     line-height: 1,231;
 }
 
-div {
-    display: block;
+#divPage {
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: yellow;
 }
 
 #divHeader {
@@ -18,6 +22,18 @@ div {
     background-image: url(../img/title3_e.png);
     background-repeat: no-repeat;
     background-color: #CEBEA0;
+}
+
+#divLeft {
+    margin: 0px;
+    padding: 5px 0px;
+    width: 450 px;
+    border-width: 1px;
+    border-right: 1px solid #CCC;
+    background-color: #ECEADF;
+    border-radius: 0px; 
+   
+
 }
 
 #divCount {
